# crosslayer-transcoder

./: .env.template  .gitignore  CLAUDE.md  LICENSE  PERFORMANCE_ANALYSIS.md  README.md  __init__.py  aggressive_nccl_tuning.py  allreduce.py  allreduce_benchmark.py  bandwidth_scaling_test.py  benchmark_data_loader.py  benchmark_text_dataloader.py  cli.py  client.py  clt.py  clt_manual_tp.py  clt_opt.py  comprehensive_dataloader_benchmark.py  data_parallel_intro_pytorch.ipynb  dataloader_demo.ipynb  dataloader_speed_test.py  ddp_comm_benchmark.py  deep_bottleneck_analysis.py  distributed_pytorch_tutorial.ipynb  distributed_tensor_demo.py  download_and_evaluate.py  fresh_dataloader_benchmark.py  gpu_comm_analysis.md  gpu_comm_benchmark.py  hardware_analysis.py  jumprelu.py  lifetime_active.pt  load_checkpoint.ipynb  load_checkpoint.py  main.py  mcp_test.py  measure_ddp_overhead.py  nccl_optimization_test.py  nnsight_error.py  (+35 more)
.cursor/: rules
.github/workflows/: pr-pytest.yml
activation_server/: README.md  __init__.py  config.py  data_generator.py  main.py  run_example.py  run_multiworker.sh  server.py  server_multiworker.py  shared_memory.py  standalone_generator.py
config/: batch_topk.yaml  batch_topk_aux.yaml  batch_topk_fp16.yaml  batch_topk_gpu_3_tests.yaml  batch_topk_k=20.yaml  batch_topk_optims.yaml  circuit-tracer.yaml  debug-cpu.yaml  debug.yaml  debug_circuit-tracer.yaml  default.yaml  default_circuit-tracer.yaml  jumprelu-clt-toy-L0=1.yaml  jumprelu-clt-toy-L0=2.yaml  jumprelu-clt-toy.yaml  jumprelu-clt.yaml  jumprelu-plt-toy-L0=1.yaml  jumprelu-plt-toy-L0=2.yaml  jumprelu-plt.yaml  matryoshka-clt-14k.yaml  matryoshka-clt-16k.yaml  matryoshka-clt-18k.yaml  matryoshka-clt.yaml  molt-long.yaml  molt.yaml  per_layer_topk.yaml  staging-new.yaml  staging-profile.yaml  staging.yaml  topk-clt-16k-control.yaml  topk-clt-debug.yaml  topk-clt-toy.yaml  topk-clt.yaml  topk-plt-16k-control.yaml  topk-plt-toy-L0=1.yaml  topk-plt-toy-L0=2.yaml  topk-plt-toy.yaml
config/21k_sweep/: batchtopk-k=10.yaml
config/dead_features/: topk-clt-no-aux-n-features-sweep.yaml  topk-clt-no-aux.yaml
config/debug-batchtopk/: batchtopk-plt.yaml  jumprelu-no-sparsity.yaml  layerbatchtopk-k=16.yaml  topk-k=16.yaml  topk-plt.yaml
config/molt/: molt.yaml  (+1 more)
crosslayer_transcoder/: __init__.py  main.py
data/: README.md  __init__.py  activation_sources.py  data_generator.py  datamodule.py  dataset.py  deployment_policy.py  generation_loop.py  process_monitor.py  shared_memory.py
data_loader/: README.md  __init__.py  activation_sources.py  config.py  data_generator.py  dataset.py  factory.py  generation_loop.py  process_monitor.py  shared_memory.py
local/: README.md
metrics/: __init__.py  dead_features.py  replacement_model_accuracy.py
model/: __init__.py  clt.py  clt_lightning.py  jumprelu.py  molt.py  standardize.py  topk.py
scripts/: upload_to_huggingface.py
test/: benchmark_data_loader.py  test_dead_features.py  test_deployment_policy.py  test_process_monitor.py  test_text_dataset.py  test_topk.py
tests/: benchmark_data_loader.py  benchmark_text_dataloader.py  conftest.py  debug_actvs.pt  test_checkpoint_loading.py  test_circuit_tracer_integration.py  test_convert_to_circuit_tracer.py  test_dead_features.py  test_deployment_policy.py  test_load_from_pretained.py  test_load_from_pretrained.py  test_module_builder.py  test_process_monitor.py  test_save_to_pretrained.py  test_standardization_folding.py  test_standarization_folding.py  test_text_dataset.py  test_topk.py
utils/: __init__.py  buffer.py  callbacks.py  store_actvs.ipynb  test_streaming.py  train.py  utils.py
weights/: checkpoint.safetensors
(+155 files in other folders)
