[project]
name = "crosslayer-transcoder"
version = "0.1.0"
description = "An implementation of Anthropic's crosslayer transcoders"
authors = [{name = "Georg Lange"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch>=2.7.1",
    "nnsight==0.5.0.dev7",
    "datasets>=3.6.0",
    "h5py>=3.13.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1",
    "wandb>=0.19.11",
    "seaborn>=0.13.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "transformers>=4.46.0",
    "requests>=2.32.0",
    "numpy>=1.24.0",
    "jsonargparse[signatures]>=4.27.7",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
]


[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]

[tool.black]
line-length = 110
