[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosslayer-transcoder"
version = "0.1.0"
description = "An implementation of Anthropic's crosslayer transcoders"
authors = [{name = "Georg Lange"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch>=2.8.0",
    "nnsight==0.5.0.dev7",
    "datasets>=3.6.0",
    "h5py>=3.13.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1",
    "wandb>=0.19.11",
    "transformers>=4.46.0",
    "numpy>=1.24.0",
    "jsonargparse[signatures]>=4.27.7",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]

[project.scripts]
clt = "crosslayer_transcoder.main:main"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = [
  "E501",   # line length (handled by formatter)
  "E402",   # module-import-not-at-top-of-file (intentional for env vars)
  "F722",   # forward-annotation-syntax-error (jaxtyping uses special syntax)
  "F821",   # undefined-name (jaxtyping type annotations)
  "E741",   # ambiguous-variable-name (common in ML: l, x, y, etc.)
]

[tool.ruff.lint.isort]
known-first-party = ["crosslayer_transcoder"]
