[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crosslayer-transcoder"
version = "0.1.0"
description = "An implementation of Anthropic's crosslayer transcoders"
authors = [{name = "Georg Lange"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "torch>=2.8.0",
    "nnsight==0.5.0.dev7",
    "datasets==3.6.0",
    "h5py>=3.13.0",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "lightning>=2.5.1",
    "wandb>=0.19.11",
    "transformers>=4.46.0",
    "numpy>=1.24.0",
    "jsonargparse[signatures]>=4.27.7",
    "modal>=1.1.4",
    "circuit-tracer",
    "hf-transfer>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "circuit-tracer"
]
[project.scripts]
clt = "crosslayer_transcoder.main:main"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.2",
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]

[tool.uv.sources]
circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", rev = "main" }

[tool.hatch.metadata]
allow-direct-references=true

[tool.black]
line-length = 110

[tool.ruff.lint]
ignore = ["F722"]